# internal/handlers/administator_handler/archive_supervisor.go
@@ -1,0 +1,47 @@
+package administator_handler
+
+import (
+	"net/http"
+
+	"uir_draft/internal/handlers/administator_handler/request_models"
+	"uir_draft/internal/pkg/models"
+
+	"github.com/gin-gonic/gin"
+)
+
+// ArchiveSupervisor
+//
+//	@Summary		Архивирование научных руководителей
+//
+//	@Description	Архивирование научных руководителей
+//
+//	@Tags			NEW
+//	@Accept			json
+//	@Param			input body request_models.DeleteByUUIDRequest true "Данные"
+//	@Success		200
+//	@Param			token	path		string	true	"Токен пользователя"
+//	@Failure		400		{string}	string	"Неверный формат данных"
+//	@Failure		401		{string}	string	"Токен протух"
+//	@Failure		204		{string}	string	"Нет записей в БД"
+//	@Failure		500		{string}	string	"Ошибка на стороне сервера"
+//	@Router			/administrator/supervisor/{token} [put]
+func (h *AdministratorHandler) ArchiveSupervisor(ctx *gin.Context) {
+	_, err := h.authenticate(ctx)
+	if err != nil {
+		ctx.AbortWithError(models.MapErrorToCode(err), err)
+		return
+	}
+
+	reqBody := request_models.DeleteByUUIDRequest{}
+	if err = ctx.ShouldBindJSON(&reqBody); err != nil {
+		ctx.AbortWithError(http.StatusBadRequest, err)
+		return
+	}
+
+	if err = h.user.ArchiveSupervisor(ctx, reqBody.IDs); err != nil {
+		ctx.AbortWithError(models.MapErrorToCode(err), err)
+		return
+	}
+
+	ctx.Status(http.StatusOK)
+}
